--- a/src/main/resources/static/application.html
+++ b/src/main/resources/static/application.html
@@ -1,10 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Портал допомоги біженцям</title>
+    <link rel="stylesheet" href="/templates/applications.css">
+    <script src="/scripts/scripts.js"></script>
 </head>
 <body>
+<!-- Шапка сайту -->
+<header>
+    <nav>
+        <div class="logo">
+            <a href="#">Портал допомоги</a>
+        </div>
+        <ul class="nav-links">
+            <li><a href="#">Головна</a></li>
+            <li><a href="#">Про нас</a></li>
+            <li><a href="#">Допомога</a></li>
+            <li><a href="#">Контакти</a></li>
+        </ul>
+        <div class="auth-buttons">
+            <a href="#" class="login-btn">Увійти</a>
+            <a href="#" class="register-btn">Реєстрація</a>
+        </div>
+    </nav>
+</header>
+
+<!-- Головний контент -->
+<main>
+    <section class="hero">
+        <h1>Ласкаво просимо на портал допомоги біженцям</h1>
+        <p>Допомагаємо знайти підтримку та необхідні ресурси тим, хто цього потребує.</p>
+        <a href="#" class="cta-btn">Дізнатися більше</a>
+    </section>
+
+    <section class="features">
+        <div class="feature">
+            <h2>Подати запит на допомогу</h2>
+            <p>Швидко та легко подайте запит на необхідну допомогу в декілька кліків.</p>
+        </div>
+        <div class="feature">
+            <h2>Стати волонтером</h2>
+            <p>Приєднуйтесь до нашої команди волонтерів та допомагайте тим, хто цього потребує.</p>
+        </div>
+        <div class="feature">
+            <h2>Знайти ресурси</h2>
+            <p>Перегляньте доступні ресурси та послуги у вашому регіоні.</p>
+        </div>
+    </section>
+</main>
+
+<!-- Футер -->
+<footer>
+    <p>&copy; 2023 Портал допомоги біженцям. Всі права захищені.</p>
+</footer>
+
+<!-- Модальне вікно входу -->
+<div id="login-modal" class="modal">
+    <div class="modal-content">
+        <span class="close-btn">&times;</span>
+        <h2>Вхід до аккаунту</h2>
+        <form id="login-form">
+            <label for="email">Електронна пошта:</label>
+            <input type="email" id="email" name="email" required>
+
+            <label for="password">Пароль:</label>
+            <input type="password" id="password" name="password" required>
+
+            <button type="submit">Увійти</button>
+        </form>
+        <p>Немає аккаунту? <a href="#">Зареєструйтесь</a></p>
+    </div>
+</div>
+
+<!-- Підключення скрипта -->
 
 </body>
 </html>
