--- a/src/main/resources/static/application.html
+++ b/src/main/resources/static/application.html
@@ -2,9 +2,9 @@
 <html lang="uk">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портал допомоги біженцям</title>
     <link rel="stylesheet" href="/templates/applications.css">
-    <script src="/scripts/scripts.js"></script>
 </head>
 <body>
 <!-- Шапка сайту -->
@@ -37,7 +37,7 @@
     <section class="features">
         <div class="feature">
             <h2>Подати запит на допомогу</h2>
-            <p>Швидко та легко подайте запит на необхідну допомогу в декілька кліків.</p>
+            <p>Швидко та легко подайте запит на необхідну допомогу.</p>
         </div>
         <div class="feature">
             <h2>Стати волонтером</h2>
@@ -50,7 +50,6 @@
     </section>
 </main>
 
-<!-- Футер -->
 <footer>
     <p>&copy; 2023 Портал допомоги біженцям. Всі права захищені.</p>
 </footer>
@@ -59,7 +58,7 @@
 <div id="login-modal" class="modal">
     <div class="modal-content">
         <span class="close-btn">&times;</span>
-        <h2>Вхід до аккаунту</h2>
+        <h2>Вхід до облікового запису</h2>
         <form id="login-form">
             <label for="email">Електронна пошта:</label>
             <input type="email" id="email" name="email" required>
@@ -69,11 +68,11 @@
 
             <button type="submit">Увійти</button>
         </form>
-        <p>Немає аккаунту? <a href="#">Зареєструйтесь</a></p>
+        <p>Немає облікового запису? <a href="#">Зареєструйтесь</a></p>
     </div>
 </div>
 
-<!-- Підключення скрипта -->
-
+<!-- Підключення JavaScript -->
+<script src="/scripts/scripts.js"></script>
 </body>
 </html>
