--- a/src/main/resources/static/application.html
+++ b/src/main/resources/static/application.html
@@ -50,6 +50,7 @@
     </section>
 </main>
 
+<!-- Футер -->
 <footer>
     <p>&copy; 2023 Портал допомоги біженцям. Всі права захищені.</p>
 </footer>
@@ -68,7 +69,48 @@
 
             <button type="submit">Увійти</button>
         </form>
-        <p>Немає облікового запису? <a href="#">Зареєструйтесь</a></p>
+        <p>Немає облікового запису? <a href="#" class="register-link">Зареєструйтесь</a></p>
+    </div>
+</div>
+
+<!-- Модальне вікно реєстрації -->
+<div id="register-modal" class="modal">
+    <div class="modal-content">
+        <span class="close-btn register-close-btn">&times;</span>
+        <h2>Реєстрація нового користувача</h2>
+        <form id="register-form">
+            <label for="reg-name">Ім'я:</label>
+            <input type="text" id="reg-name" name="name" required>
+
+            <label for="reg-email">Електронна пошта:</label>
+            <input type="email" id="reg-email" name="email" required>
+
+            <label for="reg-password">Пароль:</label>
+            <input type="password" id="reg-password" name="password" required>
+
+            <label for="reg-confirm-password">Підтвердження пароля:</label>
+            <input type="password" id="reg-confirm-password" name="confirm-password" required>
+
+            <!-- Поле вибору типу користувача -->
+            <label for="user-type">Тип користувача:</label>
+            <select id="user-type" name="user-type" required>
+                <option value="" disabled selected>Виберіть тип користувача</option>
+                <option value="refugee">Біженець</option>
+                <option value="volunteer">Волонтер</option>
+            </select>
+
+            <!-- Додаткові поля для волонтерів -->
+            <div id="volunteer-fields" style="display: none;">
+                <label for="volunteer-skills">Навички та досвід:</label>
+                <textarea id="volunteer-skills" name="volunteer-skills" rows="4"></textarea>
+
+                <label for="volunteer-availability">Доступність:</label>
+                <input type="text" id="volunteer-availability" name="volunteer-availability">
+            </div>
+
+            <button type="submit">Зареєструватися</button>
+        </form>
+        <p>Вже маєте обліковий запис? <a href="#" class="login-link">Увійдіть</a></p>
     </div>
 </div>
 
