--- a/src/main/resources/static/application.html
+++ b/src/main/resources/static/application.html
@@ -116,5 +116,6 @@
 
 <!-- Підключення JavaScript -->
 <script src="/scripts/scripts.js"></script>
+<script src="/scripts/authentification.js"></script>
 </body>
 </html>
