--- a/src/main/resources/static/refugee.html
+++ b/src/main/resources/static/refugee.html
@@ -38,40 +38,107 @@
     <section class="dashboard">
         <h2>Ваші можливості</h2>
         <div class="dashboard-actions">
-            <a href="#" class="action-btn">Переглянути мої запити</a>
-            <a href="#" class="action-btn">Корисні ресурси</a>
-            <a href="#" class="action-btn">Налаштування профілю</a>
+            <a href="#" class="action-btn" id="view-my-requests-btn">Переглянути мої запити</a>
+            <a href="#" class="action-btn" id="useful-resources-btn">Корисні ресурси</a>
+            <a href="#" class="action-btn" id="profile-settings-btn">Налаштування профілю</a>
+            <a href="#" class="action-btn" id="notifications-btn">Сповіщення</a>
         </div>
     </section>
+
+    <!-- Список запитів на допомогу -->
+    <section class="requests" id="requests-section" style="display: none;">
+        <h2>Запити на допомогу</h2>
+        <div class="requests-list" id="requests-list">
+            <!-- Список запитів буде динамічно завантажуватися за допомогою JavaScript -->
+        </div>
+    </section>
+
+    <!-- Секція "Мої активні запити" -->
+    <section class="my-requests" id="my-requests-section" style="display: none;">
+        <h2>Мої активні запити</h2>
+        <div class="my-requests-list" id="my-requests-list">
+            <!-- Список активних запитів буде завантажуватися динамічно -->
+        </div>
+    </section>
+
+    <!-- Модальне вікно подання запиту -->
+    <div id="request-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-btn request-close-btn">&times;</span>
+            <h2>Подати запит на допомогу</h2>
+            <form id="request-form">
+                <label for="request-type">Тип допомоги:</label>
+                <select id="request-type" name="request-type" required>
+                    <option value="" disabled selected>Виберіть тип допомоги</option>
+                    <option value="housing">Житло</option>
+                    <option value="medical">Медична допомога</option>
+                    <option value="legal">Юридична допомога</option>
+                    <!-- Додайте інші типи допомоги за потреби -->
+                </select>
+
+                <div id="additional-fields">
+                    <!-- Додаткові поля будуть додаватися динамічно за допомогою JavaScript -->
+                </div>
+
+                <label for="request-description">Опис ситуації:</label>
+                <textarea id="request-description" name="request-description" rows="4" required></textarea>
+
+                <button type="submit">Подати запит</button>
+            </form>
+        </div>
+    </div>
+
+    <!-- Модальне вікно "Переглянути мої запити" -->
+    <div id="my-requests-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-btn my-requests-close-btn">&times;</span>
+            <h2>Мої активні запити</h2>
+            <div class="my-requests-list" id="my-requests-list-modal">
+                <!-- Список активних запитів буде завантажуватися динамічно -->
+            </div>
+        </div>
+    </div>
+
+    <!-- Модальне вікно "Налаштування профілю" -->
+    <div id="profile-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-btn profile-close-btn">&times;</span>
+            <h2>Налаштування профілю</h2>
+            <form id="profile-form">
+                <label for="user-name">Ім'я:</label>
+                <input type="text" id="user-name" name="user-name" value="[Ім'я користувача]" required>
+
+                <label for="user-email">Електронна пошта:</label>
+                <input type="email" id="user-email" name="user-email" value="[Email користувача]" required>
+
+                <label for="user-address">Адреса:</label>
+                <input type="text" id="user-address" name="user-address" value="[Адреса користувача]">
+
+                <label for="user-phone">Телефон:</label>
+                <input type="tel" id="user-phone" name="user-phone" value="[Телефон користувача]">
+
+                <button type="submit">Зберегти зміни</button>
+            </form>
+        </div>
+    </div>
+
+    <!-- Модальне вікно "Сповіщення" -->
+    <div id="notifications-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-btn notifications-close-btn">&times;</span>
+            <h2>Сповіщення</h2>
+            <div id="notifications-list">
+                <!-- Список сповіщень буде завантажуватися динамічно -->
+                <p>Наразі у вас немає нових сповіщень.</p>
+            </div>
+        </div>
+    </div>
 </main>
 
 <!-- Футер -->
 <footer>
     <p>&copy; 2023 Портал допомоги біженцям. Всі права захищені.</p>
 </footer>
-
-<!-- Модальне вікно подання запиту -->
-<div id="request-modal" class="modal">
-    <div class="modal-content">
-        <span class="close-btn request-close-btn">&times;</span>
-        <h2>Подати запит на допомогу</h2>
-        <form id="request-form">
-            <label for="request-type">Тип допомоги:</label>
-            <select id="request-type" name="request-type" required>
-                <option value="" disabled selected>Виберіть тип допомоги</option>
-                <option value="housing">Житло</option>
-                <option value="medical">Медична допомога</option>
-                <option value="legal">Юридична допомога</option>
-                <!-- Додайте інші типи допомоги за потреби -->
-            </select>
-
-            <label for="request-description">Опис ситуації:</label>
-            <textarea id="request-description" name="request-description" rows="4" required></textarea>
-
-            <button type="submit">Подати запит</button>
-        </form>
-    </div>
-</div>
 
 <!-- Підключення JavaScript -->
 <script src="/scripts/refugees.js"></script>
