--- a/src/main/resources/static/refugee.html
+++ b/src/main/resources/static/refugee.html
@@ -44,101 +44,150 @@
             <a href="#" class="action-btn" id="notifications-btn">Сповіщення</a>
         </div>
     </section>
-
-    <!-- Список запитів на допомогу -->
-    <section class="requests" id="requests-section" style="display: none;">
-        <h2>Запити на допомогу</h2>
-        <div class="requests-list" id="requests-list">
-            <!-- Список запитів буде динамічно завантажуватися за допомогою JavaScript -->
-        </div>
-    </section>
-
-    <!-- Секція "Мої активні запити" -->
-    <section class="my-requests" id="my-requests-section" style="display: none;">
-        <h2>Мої активні запити</h2>
-        <div class="my-requests-list" id="my-requests-list">
-            <!-- Список активних запитів буде завантажуватися динамічно -->
-        </div>
-    </section>
-
-    <!-- Модальне вікно подання запиту -->
-    <div id="request-modal" class="modal">
-        <div class="modal-content">
-            <span class="close-btn request-close-btn">&times;</span>
-            <h2>Подати запит на допомогу</h2>
-            <form id="request-form">
-                <label for="request-type">Тип допомоги:</label>
-                <select id="request-type" name="request-type" required>
-                    <option value="" disabled selected>Виберіть тип допомоги</option>
-                    <option value="housing">Житло</option>
-                    <option value="medical">Медична допомога</option>
-                    <option value="legal">Юридична допомога</option>
-                    <!-- Додайте інші типи допомоги за потреби -->
-                </select>
-
-                <div id="additional-fields">
-                    <!-- Додаткові поля будуть додаватися динамічно за допомогою JavaScript -->
-                </div>
-
-                <label for="request-description">Опис ситуації:</label>
-                <textarea id="request-description" name="request-description" rows="4" required></textarea>
-
-                <button type="submit">Подати запит</button>
-            </form>
-        </div>
-    </div>
-
-    <!-- Модальне вікно "Переглянути мої запити" -->
-    <div id="my-requests-modal" class="modal">
-        <div class="modal-content">
-            <span class="close-btn my-requests-close-btn">&times;</span>
-            <h2>Мої активні запити</h2>
-            <div class="my-requests-list" id="my-requests-list-modal">
-                <!-- Список активних запитів буде завантажуватися динамічно -->
-            </div>
-        </div>
-    </div>
-
-    <!-- Модальне вікно "Налаштування профілю" -->
-    <div id="profile-modal" class="modal">
-        <div class="modal-content">
-            <span class="close-btn profile-close-btn">&times;</span>
-            <h2>Налаштування профілю</h2>
-            <form id="profile-form">
-                <label for="user-name">Ім'я:</label>
-                <input type="text" id="user-name" name="user-name" value="[Ім'я користувача]" required>
-
-                <label for="user-email">Електронна пошта:</label>
-                <input type="email" id="user-email" name="user-email" value="[Email користувача]" required>
-
-                <label for="user-address">Адреса:</label>
-                <input type="text" id="user-address" name="user-address" value="[Адреса користувача]">
-
-                <label for="user-phone">Телефон:</label>
-                <input type="tel" id="user-phone" name="user-phone" value="[Телефон користувача]">
-
-                <button type="submit">Зберегти зміни</button>
-            </form>
-        </div>
-    </div>
-
-    <!-- Модальне вікно "Сповіщення" -->
-    <div id="notifications-modal" class="modal">
-        <div class="modal-content">
-            <span class="close-btn notifications-close-btn">&times;</span>
-            <h2>Сповіщення</h2>
-            <div id="notifications-list">
-                <!-- Список сповіщень буде завантажуватися динамічно -->
-                <p>Наразі у вас немає нових сповіщень.</p>
-            </div>
-        </div>
-    </div>
 </main>
 
 <!-- Футер -->
 <footer>
     <p>&copy; 2023 Портал допомоги біженцям. Всі права захищені.</p>
 </footer>
+
+<!-- Модальне вікно подання запиту -->
+<div id="request-modal" class="modal">
+    <div class="modal-content">
+        <span class="close-btn request-close-btn">&times;</span>
+        <h2>Подати запит на допомогу</h2>
+        <form id="request-form">
+            <label for="request-type">Тип допомоги:</label>
+            <select id="request-type" name="request-type" required>
+                <option value="" disabled selected>Виберіть тип допомоги</option>
+                <option value="housing">Житло</option>
+                <option value="medical">Медична допомога</option>
+                <option value="legal">Юридична допомога</option>
+                <option value="employment">Допомога у працевлаштуванні</option>
+                <option value="education">Освітні та професійні програми</option>
+                <option value="food">Продукти харчування та предмети першої необхідності</option>
+                <option value="financial">Фінансова допомога</option>
+            </select>
+
+            <label for="request-description">Опис ситуації:</label>
+            <textarea id="request-description" name="request-description" rows="4" required></textarea>
+
+            <!-- Додаткові поля для Житла -->
+            <div id="housing-fields" class="additional-fields">
+                <label for="family-members">Кількість членів сім'ї:</label>
+                <input type="number" id="family-members" name="family-members" min="1" required>
+
+                <label for="special-needs">Особливі потреби (якщо є):</label>
+                <textarea id="special-needs" name="special-needs" rows="2"></textarea>
+            </div>
+
+            <!-- Додаткові поля для Медичної допомоги -->
+            <div id="medical-fields" class="additional-fields">
+                <label for="medical-condition">Опис хронічної хвороби:</label>
+                <textarea id="medical-condition" name="medical-condition" rows="3" required></textarea>
+            </div>
+
+            <!-- Додаткові поля для Юридичної допомоги -->
+            <div id="legal-fields" class="additional-fields">
+                <label for="legal-issue">Опис юридичної проблеми:</label>
+                <textarea id="legal-issue" name="legal-issue" rows="3" required></textarea>
+            </div>
+
+            <!-- Додаткові поля для Допомоги у працевлаштуванні -->
+            <div id="employment-fields" class="additional-fields">
+                <label for="current-employment">Поточний статус зайнятості:</label>
+                <select id="current-employment" name="current-employment" required>
+                    <option value="" disabled selected>Виберіть статус</option>
+                    <option value="unemployed">Безробітний</option>
+                    <option value="employed">Зайнятий</option>
+                    <option value="student">Студент</option>
+                </select>
+
+                <label for="desired-job">Бажана посада:</label>
+                <input type="text" id="desired-job" name="desired-job" required>
+            </div>
+
+            <!-- Додаткові поля для Освітніх та професійних програм -->
+            <div id="education-fields" class="additional-fields">
+                <label for="current-education">Поточний рівень освіти:</label>
+                <select id="current-education" name="current-education" required>
+                    <option value="" disabled selected>Виберіть рівень</option>
+                    <option value="secondary">Середня освіта</option>
+                    <option value="bachelor">Бакалавр</option>
+                    <option value="master">Магістр</option>
+                    <option value="doctorate">Доктор наук</option>
+                </select>
+
+                <label for="desired-program">Бажана освітня або професійна програма:</label>
+                <input type="text" id="desired-program" name="desired-program" required>
+            </div>
+
+            <!-- Додаткові поля для Продуктів харчування та предметів першої необхідності -->
+            <div id="food-fields" class="additional-fields">
+                <label for="food-items">Перелік необхідних продуктів та предметів:</label>
+                <textarea id="food-items" name="food-items" rows="3" required></textarea>
+            </div>
+
+            <!-- Додаткові поля для Фінансової допомоги -->
+            <div id="financial-fields" class="additional-fields">
+                <label for="financial-amount">Необхідна сума:</label>
+                <input type="number" id="financial-amount" name="financial-amount" min="1" required>
+
+                <label for="financial-purpose">Мета фінансової допомоги:</label>
+                <textarea id="financial-purpose" name="financial-purpose" rows="2" required></textarea>
+            </div>
+
+            <button type="submit">Подати запит</button>
+        </form>
+    </div>
+</div>
+
+<!-- Модальне вікно "Мої активні запити" -->
+<div id="my-requests-modal" class="modal">
+    <div class="modal-content">
+        <span class="close-btn my-requests-close-btn">&times;</span>
+        <h2>Мої активні запити</h2>
+        <div id="my-requests-list">
+            <!-- Список активних запитів буде завантажуватися динамічно -->
+            <p>Наразі у вас немає активних запитів.</p>
+        </div>
+    </div>
+</div>
+
+<!-- Модальне вікно "Налаштування профілю" -->
+<div id="profile-modal" class="modal">
+    <div class="modal-content">
+        <span class="close-btn profile-close-btn">&times;</span>
+        <h2>Налаштування профілю</h2>
+        <form id="profile-form">
+            <label for="user-name">Ім'я:</label>
+            <input type="text" id="user-name" name="user-name" value="[Ім'я користувача]" required>
+
+            <label for="user-email">Електронна пошта:</label>
+            <input type="email" id="user-email" name="user-email" value="[Email користувача]" required>
+
+            <label for="user-address">Адреса:</label>
+            <input type="text" id="user-address" name="user-address" value="[Адреса користувача]" required>
+
+            <label for="user-phone">Номер телефону:</label>
+            <input type="tel" id="user-phone" name="user-phone" value="[Номер телефону]" required>
+
+            <button type="submit">Зберегти зміни</button>
+        </form>
+    </div>
+</div>
+
+<!-- Модальне вікно "Сповіщення" -->
+<div id="notifications-modal" class="modal">
+    <div class="modal-content">
+        <span class="close-btn notifications-close-btn">&times;</span>
+        <h2>Сповіщення</h2>
+        <div id="notifications-list">
+            <!-- Список сповіщень буде завантажуватися динамічно -->
+            <p>Наразі у вас немає нових сповіщень.</p>
+        </div>
+    </div>
+</div>
 
 <!-- Підключення JavaScript -->
 <script src="/scripts/refugees.js"></script>
