--- a/src/main/resources/static/volunteer.html
+++ b/src/main/resources/static/volunteer.html
@@ -44,21 +44,65 @@
         </div>
     </section>
 
-    <!-- Список запитів на допомогу -->
-    <section class="requests" id="requests-section" style="display: none;">
-        <h2>Запити на допомогу</h2>
-        <div class="requests-list" id="requests-list">
-            <!-- Список запитів буде динамічно завантажуватися за допомогою JavaScript -->
-        </div>
+    <!-- Секція "Мої категорії допомоги" -->
+    <section class="my-categories" id="my-categories-section">
+        <h2>Мої категорії допомоги</h2>
+        <form id="categories-form">
+            <div class="categories-list">
+                <label>
+                    <input type="checkbox" name="categories" value="housing">
+                    <span>Житло</span>
+                </label>
+                <label>
+                    <input type="checkbox" name="categories" value="medical">
+                    <span>Медична допомога</span>
+                </label>
+                <label>
+                    <input type="checkbox" name="categories" value="legal">
+                    <span>Юридична допомога</span>
+                </label>
+                <label>
+                    <input type="checkbox" name="categories" value="employment">
+                    <span>Допомога у працевлаштуванні</span>
+                </label>
+                <label>
+                    <input type="checkbox" name="categories" value="education">
+                    <span>Освітні та професійні програми</span>
+                </label>
+                <label>
+                    <input type="checkbox" name="categories" value="food">
+                    <span>Продукти харчування та предмети першої необхідності</span>
+                </label>
+                <label>
+                    <input type="checkbox" name="categories" value="financial">
+                    <span>Фінансова допомога</span>
+                </label>
+            </div>
+            <button type="submit">Зберегти категорії</button>
+        </form>
     </section>
 
-    <!-- Секція "Мої активні запити" -->
-    <section class="my-requests" id="my-requests-section" style="display: none;">
-        <h2>Мої активні запити</h2>
-        <div class="my-requests-list" id="my-requests-list">
-            <!-- Список активних запитів буде завантажуватися динамічно -->
+    <!-- Модальне вікно "Запити на допомогу" -->
+    <div id="help-requests-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-btn help-requests-close-btn">&times;</span>
+            <h2>Запити на допомогу</h2>
+            <div class="requests-list" id="help-requests-list">
+                <!-- Список запитів буде завантажуватися динамічно за допомогою JavaScript -->
+            </div>
         </div>
-    </section>
+    </div>
+
+    <!-- Модальне вікно "Мої активні запити" -->
+    <div id="my-active-requests-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-btn my-active-requests-close-btn">&times;</span>
+            <h2>Мої активні запити</h2>
+            <div class="my-requests-list" id="my-active-requests-list">
+                <!-- Список активних запитів буде завантажуватися динамічно -->
+            </div>
+        </div>
+    </div>
 
     <!-- Модальне вікно з деталями запиту -->
     <div id="request-modal" class="modal">
@@ -78,17 +122,25 @@
             <span class="close-btn profile-close-btn">&times;</span>
             <h2>Налаштування профілю</h2>
             <form id="profile-form">
-                <label for="volunteer-name">Ім'я:</label>
-                <input type="text" id="volunteer-name" name="volunteer-name" value="[Ім'я волонтера]" required>
+                <div class="form-group">
+                    <label for="volunteer-name">Ім'я:</label>
+                    <input type="text" id="volunteer-name" name="volunteer-name" value="[Ім'я волонтера]" required>
+                </div>
 
-                <label for="volunteer-email">Електронна пошта:</label>
-                <input type="email" id="volunteer-email" name="volunteer-email" value="[Email волонтера]" required>
+                <div class="form-group">
+                    <label for="volunteer-email">Електронна пошта:</label>
+                    <input type="email" id="volunteer-email" name="volunteer-email" value="[Email волонтера]" required>
+                </div>
 
-                <label for="volunteer-skills">Навички та досвід:</label>
-                <textarea id="volunteer-skills" name="volunteer-skills" rows="4">[Навички волонтера]</textarea>
+                <div class="form-group">
+                    <label for="volunteer-skills">Навички та досвід:</label>
+                    <textarea id="volunteer-skills" name="volunteer-skills" rows="4" required>[Навички волонтера]</textarea>
+                </div>
 
-                <label for="volunteer-availability">Доступність:</label>
-                <input type="text" id="volunteer-availability" name="volunteer-availability" value="[Доступність волонтера]">
+                <div class="form-group">
+                    <label for="volunteer-availability">Доступність:</label>
+                    <input type="text" id="volunteer-availability" name="volunteer-availability" value="[Доступність волонтера]" required>
+                </div>
 
                 <button type="submit">Зберегти зміни</button>
             </form>
