--- a/src/main/resources/static/refugee.html
+++ b/src/main/resources/static/refugee.html
@@ -5,21 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Особистий кабінет біженця</title>
     <link rel="stylesheet" href="/templates/refugees.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
 <!-- Шапка сайту -->
 <header>
-    <nav>
+    <nav class="navbar">
         <div class="logo">
             <a href="#">Портал допомоги</a>
         </div>
         <ul class="nav-links">
-            <li><a href="application.html">Головна</a></li>
+            <li><a href="application.html" class="active">Головна</a></li>
             <li><a href="#">Про нас</a></li>
             <li><a href="#">Контакти</a></li>
         </ul>
         <div class="auth-buttons">
             <a href="#" class="logout-btn">Вийти</a>
+        </div>
+        <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
         </div>
     </nav>
 </header>
@@ -27,7 +33,7 @@
 <!-- Героїчна секція -->
 <section class="hero">
     <div class="hero-content">
-        <h1>Ласкаво просимо, [Ім'я користувача]</h1>
+        <h1>Ласкаво просимо, <span class="user-name">[Ім'я користувача]</span></h1>
         <p>Ми раді вітати вас на нашому порталі. Тут ви можете знайти необхідну допомогу та підтримку.</p>
         <a href="#" class="cta-btn" id="request-help-btn">Подати запит на допомогу</a>
     </div>
@@ -48,7 +54,7 @@
 
 <!-- Футер -->
 <footer>
-    <p>&copy; 2023 Портал допомоги біженцям. Всі права захищені.</p>
+    <p>&copy; 2024 Портал допомоги біженцям. Всі права захищені.</p>
 </footer>
 
 <!-- Модальне вікно подання запиту -->
@@ -137,7 +143,7 @@
                 <textarea id="financial-purpose" name="financial-purpose" rows="2" required></textarea>
             </div>
 
-            <button type="submit">Подати запит</button>
+            <button type="submit" class="save-btn">Подати запит</button>
         </form>
     </div>
 </div>
@@ -160,19 +166,27 @@
         <span class="close-btn profile-close-btn">&times;</span>
         <h2>Налаштування профілю</h2>
         <form id="profile-form">
-            <label for="user-name">Ім'я:</label>
-            <input type="text" id="user-name" name="user-name" value="[Ім'я користувача]" required>
+            <div class="form-group">
+                <label for="user-name">Ім'я:</label>
+                <input type="text" id="user-name" name="user-name" value="[Ім'я користувача]" required>
+            </div>
 
-            <label for="user-email">Електронна пошта:</label>
-            <input type="email" id="user-email" name="user-email" value="[Email користувача]" required>
+            <div class="form-group">
+                <label for="user-email">Електронна пошта:</label>
+                <input type="email" id="user-email" name="user-email" value="[Email користувача]" required>
+            </div>
 
-            <label for="user-address">Адреса:</label>
-            <input type="text" id="user-address" name="user-address" value="[Адреса користувача]" required>
+            <div class="form-group">
+                <label for="user-address">Адреса:</label>
+                <input type="text" id="user-address" name="user-address" value="[Адреса користувача]" required>
+            </div>
 
-            <label for="user-phone">Номер телефону:</label>
-            <input type="tel" id="user-phone" name="user-phone" value="[Номер телефону]" required>
+            <div class="form-group">
+                <label for="user-phone">Номер телефону:</label>
+                <input type="tel" id="user-phone" name="user-phone" value="[Номер телефону]" required>
+            </div>
 
-            <button type="submit">Зберегти зміни</button>
+            <button type="submit" class="save-btn">Зберегти зміни</button>
         </form>
     </div>
 </div>
@@ -187,6 +201,11 @@
             <p>Наразі у вас немає нових сповіщень.</p>
         </div>
     </div>
+</div>
+
+<!-- Toast повідомлення -->
+<div id="toast" class="toast">
+    <p id="toast-message"></p>
 </div>
 
 <!-- Підключення JavaScript -->
