--- a/src/main/resources/static/refugee.html
+++ b/src/main/resources/static/refugee.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Особистий кабінет біженця</title>
     <link rel="stylesheet" href="/templates/refugees.css">
+    <link rel="stylesheet" href="/templates/map.css">
+
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -52,6 +54,26 @@
     </section>
 </main>
 
+
+<section class="map-section">
+    <h2>Пункти допомоги поблизу вас</h2>
+    <div class="map-container">
+        <div class="map-controls">
+            <label for="category-filter">Виберіть категорію:</label>
+            <select id="category-filter" onchange="filterMarkers(this.value)">
+                <option value="all">Всі категорії</option>
+                <option value="housing">Житло</option>
+                <option value="medical">Медична допомога</option>
+                <option value="legal">Юридична допомога</option>
+                <option value="employment">Допомога у працевлаштуванні</option>
+                <option value="education">Освітні та професійні програми</option>
+                <option value="food">Продукти харчування та предмети першої необхідності</option>
+                <option value="financial">Фінансова допомога</option>
+            </select>
+        </div>
+        <div id="map"></div>
+    </div>
+</section>
 <!-- Футер -->
 <footer>
     <p>&copy; 2024 Портал допомоги біженцям. Всі права захищені.</p>
@@ -210,5 +232,8 @@
 
 <!-- Підключення JavaScript -->
 <script src="/scripts/refugees.js"></script>
+<script src="/scripts/map.js"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAnSRimv6X5mLrvhT2TT2w-mcP9eRkv6oo&callback=initMap"></script>
+
 </body>
 </html>
