realisation volunteer logic

--- a/src/main/resources/static/volunteer.html
+++ b/src/main/resources/static/volunteer.html
@@ -178,5 +178,6 @@
 
 <!-- Підключення JavaScript -->
 <script src="/scripts/volunteers.js"></script>
+<script src="/scripts/volunteerFetch.js"></script>
 </body>
 </html>
