add additional data to request

--- a/src/main/resources/static/volunteer.html
+++ b/src/main/resources/static/volunteer.html
@@ -177,7 +177,8 @@
 </footer>
 
 <!-- Підключення JavaScript -->
-<script src="/scripts/volunteers.js"></script>
+<!-- volunteerFetch.js подключен перед volunteers.js -->
 <script src="/scripts/volunteerFetch.js"></script>
+<script src="/scripts/volunteers.js"></script>
 </body>
 </html>
