--- a/src/main/resources/static/refugee.html
+++ b/src/main/resources/static/refugee.html
@@ -54,7 +54,6 @@
     </section>
 </main>
 
-
 <section class="map-section">
     <h2>Пункти допомоги поблизу вас</h2>
     <div class="map-container">
@@ -74,6 +73,7 @@
         <div id="map"></div>
     </div>
 </section>
+
 <!-- Футер -->
 <footer>
     <p>&copy; 2024 Портал допомоги біженцям. Всі права захищені.</p>
@@ -178,6 +178,17 @@
         <div id="my-requests-list">
             <!-- Список активних запитів буде завантажуватися динамічно -->
             <p>Наразі у вас немає активних запитів.</p>
+        </div>
+    </div>
+</div>
+
+<!-- Модальне вікно "Деталі запиту" -->
+<div id="request-details-modal" class="modal">
+    <div class="modal-content">
+        <span class="close-btn request-details-close-btn">&times;</span>
+        <h2>Деталі запиту</h2>
+        <div id="request-details-content">
+            <!-- Деталі запиту будуть завантажуватися динамічно -->
         </div>
     </div>
 </div>
