--- a/src/main/resources/static/application.html
+++ b/src/main/resources/static/application.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="/templates/applications.css">
     <!-- Підключення Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <!-- Підключення Font Awesome для іконок -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-pap1D8XU4qxHBQ2j5FghoX8E1jElQhKJzlA4k6S72bkdxsXqKcXrYq0GHIY7UbD6k1b8m3lfXAP7evjLxGmYig==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 <!-- Шапка сайту -->
@@ -36,6 +38,12 @@
 
 <!-- Героїчна секція -->
 <section id="home" class="hero">
+    <!-- Фонове зображення -->
+    <img src="/images/hero-bg.jpg" alt="Героїчна секція фон" class="hero-bg">
+
+    <!-- Оверлей для покращення читабельності тексту -->
+    <div class="hero-overlay"></div>
+
     <div class="hero-content">
         <h1>Ласкаво просимо на портал допомоги біженцям</h1>
         <p>Допомагаємо знайти підтримку та необхідні ресурси тим, хто цього потребує.</p>
@@ -63,9 +71,9 @@
 <section id="about-us" class="about-us">
     <div class="container">
         <h2>Про нас</h2>
-        <p>Ми — некомерційна організація, що надає допомогу біженцям. Наша місія — забезпечити підтримку та ресурси для тих, хто цього потребує, допомагаючи їм відновити своє життя.</p>
+        <p>Ми — некомерційна організація, що надає допомогу біженцям по всьому світу. Наша місія — забезпечити підтримку та ресурси для тих, хто цього потребує, допомагаючи їм відновити своє життя.</p>
         <div class="about-content">
-            <img src="/images/about-us.jpg" alt="Про нас">
+            <img src="/images/about-us.jpg" alt="Наша команда волонтерів, що допомагає біженцям у Києві">
             <p>Наші волонтери працюють у багатьох країнах, надаючи безпосередню допомогу біженцям. Ми співпрацюємо з місцевими громадами та іншими організаціями для забезпечення найефективнішої підтримки.</p>
         </div>
     </div>
@@ -187,7 +195,6 @@
 </div>
 
 <!-- Підключення JavaScript -->
-<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 <script src="/scripts/scripts.js"></script>
 <script src="/scripts/authentification.js"></script>
 </body>
