add information categories on application

--- a/src/main/resources/static/application.html
+++ b/src/main/resources/static/application.html
@@ -83,19 +83,35 @@
 <section id="help" class="help">
     <div class="container">
         <h2>Як отримати допомогу</h2>
-        <p>Ми надаємо різноманітну допомогу, включаючи житло, харчування, медичну підтримку та освітні ресурси. Якщо вам потрібна допомога, будь ласка, зв'яжіться з нами або подайте запит через наш портал.</p>
+        <p>Ми надаємо різноманітну допомогу, щоб забезпечити всі потреби біженців. Ось основні категорії допомоги, які ми пропонуємо:</p>
         <div class="help-content">
             <div class="help-item">
                 <h3>Житло</h3>
                 <p>Ми допомагаємо знайти тимчасове та постійне житло для біженців та їхніх сімей.</p>
             </div>
             <div class="help-item">
-                <h3>Медична підтримка</h3>
+                <h3>Медична допомога</h3>
                 <p>Надаємо доступ до медичних послуг та психологічної підтримки.</p>
             </div>
             <div class="help-item">
-                <h3>Освіта</h3>
-                <p>Допомагаємо дітям та дорослим отримати освіту та навички для нового життя.</p>
+                <h3>Юридична допомога</h3>
+                <p>Консультуємо з питань легалізації статусу, документів та прав біженців.</p>
+            </div>
+            <div class="help-item">
+                <h3>Допомога у працевлаштуванні</h3>
+                <p>Допомагаємо знайти роботу, надаємо професійні консультації та підтримку.</p>
+            </div>
+            <div class="help-item">
+                <h3>Освітні та професійні програми</h3>
+                <p>Пропонуємо освітні курси та професійні тренінги для інтеграції в нове суспільство.</p>
+            </div>
+            <div class="help-item">
+                <h3>Продукти харчування та предмети першої необхідності</h3>
+                <p>Надаємо їжу, одяг, гігієнічні засоби та інші необхідні речі.</p>
+            </div>
+            <div class="help-item">
+                <h3>Фінансова допомога</h3>
+                <p>Допомагаємо отримати фінансову підтримку для забезпечення базових потреб.</p>
             </div>
         </div>
     </div>
