improve chat logic

--- a/src/main/resources/static/volunteer.html
+++ b/src/main/resources/static/volunteer.html
@@ -33,6 +33,8 @@
 
 <!-- Героїчна секція -->
 <section class="hero">
+
+    <img src="/images/02-14-2024-06-08-24-3176816066.png" alt="Героїчна секція фон" class="hero-bg">
     <div class="hero-content">
         <h1>Ласкаво просимо, <span class="user-name">[Ім'я волонтера]</span></h1>
         <p>Дякуємо за вашу допомогу та підтримку. Разом ми робимо світ кращим!</p>
