--- a/src/main/resources/static/refugee.html
+++ b/src/main/resources/static/refugee.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="/templates/refugees.css">
     <link rel="stylesheet" href="/templates/map.css">
     <link rel="stylesheet" href="/templates/chat.css">
+    <link rel="stylesheet" href="/templates/notification.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
@@ -297,6 +299,26 @@
             </div>
         </div>
     </div>
+    <!-- Контейнер для уведомлений -->
+    <div id="notification-container"></div>
+
+    <!-- Круглая кнопка уведомлений -->
+    <button id="notification-button" title="Уведомления">
+        <i class="fas fa-bell"></i> <!-- Иконка колокольчика -->
+        <span id="notification-count" class="badge">0</span>
+    </button>
+
+    <!-- Попап для отображения последних 5 уведомлений -->
+    <div id="notification-popup" class="popup">
+        <div class="popup-header">
+            <h3>Уведомления</h3>
+            <button id="close-popup" class="close-popup"><i class="fas fa-times"></i></button>
+        </div>
+        <div id="popup-notifications" class="popup-notifications">
+            <!-- Уведомления будут динамически добавляться здесь -->
+        </div>
+    </div>
+
 
 
 <!-- Підключення JavaScript -->
@@ -305,7 +327,7 @@
 <script src="/scripts/map.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js" integrity="sha256-nkP8cj5xaTdWK/BsZl+57ZCE/Y/i4UNtbNTpgH+6Taw=" crossorigin="anonymous"></script>
-
+<script src="/scripts/notification.js"></script>
 <script src="/scripts/chat.js"></script>
 <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAnSRimv6X5mLrvhT2TT2w-mcP9eRkv6oo&callback=initMap"></script>
