--- a/src/main/resources/static/volunteer.html
+++ b/src/main/resources/static/volunteer.html
@@ -6,7 +6,9 @@
     <title>Особистий кабінет волонтера</title>
     <link rel="stylesheet" href="/templates/volunteers.css">
     <link rel="stylesheet" href="/templates/chat.css">
+    <link rel="stylesheet" href="/templates/notification.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
 <!-- Шапка сайту -->
@@ -245,6 +247,27 @@
 <div id="chat-container">
     <!-- Вміст чату буде завантажений сюди -->
 </div>
+<!-- Контейнер для уведомлений -->
+<div id="notification-container"></div>
+
+<!-- Круглая кнопка уведомлений -->
+<button id="notification-button" title="Уведомления">
+    <i class="fas fa-bell"></i> <!-- Иконка колокольчика -->
+    <span id="notification-count" class="badge">0</span>
+</button>
+
+<!-- Попап для отображения последних 5 уведомлений -->
+<div id="notification-popup" class="popup">
+    <div class="popup-header">
+        <h3>Уведомления</h3>
+        <button id="close-popup" class="close-popup"><i class="fas fa-times"></i></button>
+    </div>
+    <div id="popup-notifications" class="popup-notifications">
+        <!-- Уведомления будут динамически добавляться здесь -->
+    </div>
+</div>
+
+
 
 <!-- Підключення JavaScript -->
 <!-- volunteerFetch.js підключений перед volunteers.js -->
@@ -253,5 +276,6 @@
 <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js" integrity="sha256-nkP8cj5xaTdWK/BsZl+57ZCE/Y/i4UNtbNTpgH+6Taw=" crossorigin="anonymous"></script>
 <script src="/scripts/chat.js"></script>
+<script src="/scripts/notification.js"></script>
 </body>
 </html>
