--- a/src/main/resources/static/volunteer.html
+++ b/src/main/resources/static/volunteer.html
@@ -176,10 +176,19 @@
                 <input type="text" id="volunteer-city" name="volunteer-city" value="[Місто волонтера]" required>
             </div>
 
+
             <div class="form-group">
                 <label for="volunteer-country">Країна:</label>
                 <input type="text" id="volunteer-country" name="volunteer-country" value="[Країна волонтера]"
                        required>
+            </div>
+            <div class="form-group">
+                <label for="volunteer-profile-image">Завантажити зображення профілю:</label>
+                <input type="file" id="volunteer-profile-image" name="volunteer-profile-image" accept="image/*">
+            </div>
+            <div class="form-group">
+                <label>Ваше зображення:</label>
+                <img id="volunteer-profile-preview" src="#" alt="Зображення профілю" class="profile-preview">
             </div>
 
             <button type="submit" class="save-btn">Зберегти зміни</button>
@@ -206,7 +215,7 @@
             <div class="profile-info">
                 <img src="/images/istockphoto-1298261537-612x612.jpg" alt="Profile Picture" class="profile-pic">
                 <div>
-                    <h3>Re</h3>
+                    <h3 id="username">Re</h3>
                     <p id="status" class="status online">Онлайн</p>
                 </div>
             </div>
@@ -271,8 +280,9 @@
 
 <!-- Підключення JavaScript -->
 <!-- volunteerFetch.js підключений перед volunteers.js -->
-<script src="/scripts/volunteerFetch.js"></script>
+
 <script src="/scripts/volunteers.js"></script>
+<script src="/scripts/volunteerFetch.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js" integrity="sha256-nkP8cj5xaTdWK/BsZl+57ZCE/Y/i4UNtbNTpgH+6Taw=" crossorigin="anonymous"></script>
 <script src="/scripts/chat.js"></script>
